<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".SignUpActivity"
    android:orientation="vertical"
    android:background="@drawable/signinpage">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.Toolbar"
        app:title="@string/app_name"/>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <!--<RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20sp">-->
                <TextView
                    android:id="@+id/signup"
                    android:textSize="40sp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="25sp"
                    android:layout_marginBottom="5sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Sign up"
                    android:textColor="#205072"
                    android:textStyle="bold" />
            <!--</RelativeLayout>-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10sp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_your_email"
                    android:layout_marginHorizontal="30sp"
                    app:placeholderTextColor="#205072"
                    app:boxBackgroundColor="#cff4d2"
                    app:boxStrokeColor="#5c5c5c"
                    android:textColorHint="#205072"
                    app:helperTextTextColor="#205072"
                    app:hintTextColor="#205072"
                    style="@style/Widget.Design.TextInputLayout"
                    android:layout_marginBottom="5sp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email_up"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:textColor="#205072"
                        android:shadowColor="#000000"
                        android:textColorLink="#205072"
                        android:background="@android:color/transparent"/>


                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

            <!--<RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="40sp"
                    app:cardElevation="5sp"
                    android:layout_marginHorizontal="50sp"
                    app:cardCornerRadius="0sp"
                    android:layout_marginVertical="4sp">

                    <EditText
                        android:id="@+id/email_up"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerVertical="true"
                        android:hint="@string/enter_your_email"
                        android:textColorHint="#c7c7c7"
                        android:background="#cff4d2"
                        android:textSize="15sp"
                        android:textColor="#205072"/>

                </androidx.cardview.widget.CardView>

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="65sp"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/edittext_field"
                    android:hint="Enter your email"
                    android:inputType="textEmailAddress"
                    android:paddingVertical="10sp"
                    android:paddingLeft="30sp"
                    android:textColor="#06a4d4"/>
            </RelativeLayout>-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10sp">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.Design.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_your_name"
                    android:layout_marginHorizontal="30sp"
                    app:placeholderTextColor="#205072"
                    app:boxStrokeColor="#205072"
                    android:textColorHint="#205072"
                    app:helperTextTextColor="#205072"
                    app:hintTextColor="#205072"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/fullname_up"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:textColor="#205072"
                        android:shadowColor="#000000"
                        android:textColorLink="#205072"
                        app:boxStrokeColor="#205072"
                        android:layout_marginBottom="5sp"
                        android:background="@android:color/transparent"/>


                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>


            <!--<RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="40sp"
                    app:cardElevation="5sp"
                    android:layout_marginHorizontal="50sp"
                    app:cardCornerRadius="0sp"
                    android:layout_marginVertical="4sp">

                    <EditText
                        android:id="@+id/fullname_up"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerVertical="true"
                        android:hint="@string/enter_your_name"
                        android:textColorHint="#c7c7c7"
                        android:background="#cff4d2"
                        android:textSize="15sp"
                        android:textColor="#205072"/>

                </androidx.cardview.widget.CardView>

                <EditText
                    android:id="@+id/fullname"
                    android:layout_centerHorizontal="true"
                    android:layout_width="match_parent"
                    android:layout_height="65sp"
                    android:hint="Enter name+surname"
                    android:paddingVertical="10sp"
                    android:textColor="#06a4d4"
                    android:inputType="text"
                    android:paddingLeft="30sp"
                    android:background="@drawable/edittext_field"/>
            </RelativeLayout>-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10sp">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.Design.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_your_password"
                    android:layout_marginHorizontal="30sp"
                    app:placeholderTextColor="#205072"
                    app:boxStrokeColor="#5c5c5c"
                    android:textColorHint="#205072"
                    app:helperTextTextColor="#205072"
                    app:hintTextColor="#205072"
                    android:layout_marginBottom="5sp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password_up"
                        android:background="@android:color/transparent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:textColor="#205072"
                        android:shadowColor="#000000"
                        android:textColorLink="#205072"
                        />


                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>


            <!--<RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="40sp"
                    app:cardElevation="5sp"
                    android:layout_marginHorizontal="50sp"
                    app:cardCornerRadius="0sp"
                    android:layout_marginVertical="4sp">

                    <EditText
                        android:id="@+id/password_up"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textPassword"
                        android:layout_centerVertical="true"
                        android:hint="@string/enter_your_password"
                        android:textColorHint="#c7c7c7"
                        android:background="#cff4d2"
                        android:textSize="15sp"
                        android:textColor="#205072"/>


                </androidx.cardview.widget.CardView>

                <EditText
                    android:id="@+id/password"
                    android:layout_centerHorizontal="true"
                    android:layout_width="match_parent"
                    android:layout_height="65sp"
                    android:hint="Enter_your_password"
                    android:paddingVertical="10sp"
                    android:textColor="#06a4d4"
                    android:inputType="textVisiblePassword"
                    android:paddingLeft="30sp"
                    android:background="@drawable/edittext_field"/>
            </RelativeLayout>-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10sp">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.Design.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_the_password"
                    android:layout_marginHorizontal="30sp"
                    app:placeholderTextColor="#205072"
                    app:boxStrokeColor="#5c5c5c"
                    android:textColorHint="#205072"
                    app:helperTextTextColor="#205072"
                    app:hintTextColor="#205072"
                    android:layout_marginBottom="5sp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/confirm_password_up"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:textColor="#205072"
                        android:shadowColor="#000000"
                        android:textColorLink="#205072"
                        android:background="@android:color/transparent"/>


                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>


            <!--<RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="40sp"
                    app:cardElevation="5sp"
                    android:layout_marginHorizontal="50sp"
                    app:cardCornerRadius="0sp"
                    android:layout_marginVertical="4sp">

                    <EditText
                        android:id="@+id/confirm_password_up"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textPassword"
                        android:layout_centerVertical="true"
                        android:hint="@string/confirm_the_password"
                        android:textColorHint="#c7c7c7"
                        android:background="#cff4d2"
                        android:textSize="15sp"
                        android:textColor="#205072"/>

                </androidx.cardview.widget.CardView>

                <EditText
                    android:id="@+id/password1"
                    android:layout_centerHorizontal="true"
                    android:layout_width="match_parent"
                    android:layout_height="65sp"
                    android:hint="Confirm_the_password"
                    android:paddingVertical="10sp"
                    android:textColor="#06a4d4"
                    android:inputType="textPassword"
                    android:paddingLeft="30sp"
                    android:background="@drawable/edittext_field"/>
            </RelativeLayout>-->

            <!--<RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp">
                <EditText
                    android:id="@+id/phone"
                    android:layout_centerHorizontal="true"
                    android:layout_width="match_parent"
                    android:layout_height="65sp"
                    android:hint="Enter_your_phone_number"
                    android:paddingVertical="10sp"
                    android:textColor="#06a4d4"
                    android:inputType="text"
                    android:paddingLeft="30sp"
                    android:background="@drawable/edittext_field"/>


            </RelativeLayout>-->

            <!--<RadioGroup
                android:id="@+id/rg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_marginTop="15sp">

                <RadioButton
                    android:id="@+id/rb2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Volunteer"
                    android:buttonTint="@color/design_default_color_primary"
                    android:textStyle="bold"
                    android:textColor="#06a4d4"
                    android:onClick="radioClick"/>

                <RadioButton
                    android:id="@+id/rb3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Older Person"
                    android:textStyle="bold"
                    android:textColor="#06a4d4"
                    android:buttonTint="@color/colorPrimary"
                    android:checked="true"
                    android:onClick="radioClick"/>

            </RadioGroup>-->

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signUpButton"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginHorizontal="50sp"
            android:text="@string/sign_up"
            android:background="@drawable/w7be495"
            android:textColor="#ffffff"
            android:layout_marginTop="28sp"
            android:textSize="20sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15sp"
        android:layout_marginBottom="13sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/you_do_have_account"
            android:gravity="center_horizontal"
            android:textColor="#205072"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/signInTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_text"
            android:layout_marginLeft="10sp"
            android:textSize="20sp"
            android:textColor="#205072"
            android:textStyle="bold" />

    </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>